Bug #2509 Key on a char field in BDB changes case and accents of the original data.
Submitted: 26 Jan 2004 2:37 Modified: 29 Jan 2004 6:12
Reporter: Alexander Barkov Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.0.17 OS:Any (any)
Assigned to: Michael Widenius Target Version:

[26 Jan 2004 2:37] Alexander Barkov
Description:
mysql> create table t1 (a char(10)) engine=bdb;
Query OK, 0 rows affected (0.06 sec)

mysql> insert into t1 values ('a'),('A');
Query OK, 2 rows affected (0.02 sec)
Records: 2  Duplicates: 0  Warnings: 0

mysql> select a from t1;
+------+
| a    |
+------+
| a    |
| A    |
+------+
2 rows in set (0.01 sec)

mysql> alter table t1 add key(a);
Query OK, 2 rows affected (0.22 sec)
Records: 2  Duplicates: 0  Warnings: 0

mysql> select a from t1;
+------+
| a    |
+------+
| a    |
| a    |
+------+
2 rows in set (0.02 sec)

How to repeat:
Run the above.
[26 Jan 2004 4:36] Alexander Barkov
It works in exactly the same way with 4.0.18-current-bk.
[29 Jan 2004 6:12] Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Fix will be in 4.0.18 and 4.1.2