sql/item_strfunc.cc
@@ -1507,14 +1507,11 @@ void Item_func_elt::fix_length_and_dec()
 {
   max_length=0;
   decimals=0;
-  /*
-    first numeric argument isn't in args (3.23 and 4.0)
-    but since 4.1 the cycle should start from 1
-    so this change 
-    
-    should NOT be merged into 4.1!!!
-  */
+#if MYSQL_VERSION_ID < 40100
   for (uint i= 0; i < arg_count ; i++)
+#else
+  for (uint i= 1; i < arg_count ; i++)
+#endif
   {
     set_if_bigger(max_length,args[i]->max_length);
     set_if_bigger(decimals,args[i]->decimals);
